--- a/AKchatApp/src/app/chat/private-chats/private-chats.component.html
+++ b/AKchatApp/src/app/chat/private-chats/private-chats.component.html
@@ -10,15 +10,11 @@
     </div>
     <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
 </div>
-
 <div *ngIf="divisionVisible" class="my-division">
     <img class="" style=" height: 400px;
   width: 400px;" src={{image}}>
-
     <button type="button" class="my-division-close btn-close" aria-label="Close" (click)="toggleDivision()"></button>
-
 </div>
-
 <div class="modal-body">
     <div class="card users-card">
         <div class="card-header">
@@ -30,8 +26,17 @@
                 <span class="fw-bolder text-primary">{{service.username}}</span><span><img src="/assets/img/indityp.gif"
                         style="mix-blend-mode: multiply;height:25px;width:60px"></span>
             </div>
+        </div>  
+        <div class="position-relative d-flex" *ngIf="service.forimagetoggle" style="border:1px solid black;border-radius: 19px 19px 2px 2px;height:82px;background-color: #D4F1F4;">
+            <span class="position-absolute" style="right: 0px;"><i (click)="forimagediv()" class="bi bi-x-circle" style="font-size: 30px;"></i></span>
+            <span *ngIf="service.preview.length===0" style="    position: absolute;font-weight: 800;font-size: 20px;left: 140px;top: 22px;">
+                PLease Select Any Image
+            </span>
+            <div class="position-relative" *ngFor="let preview of service.preview">
+                <span class="position-absolute" style="left: 78px;" (click)="imageremove()"><img src="/assets/img/cancel.png" style="width:18px;height:15px"></span>
+                <img  [src]="preview" class="rounded p-2" width="100" height="80px">
+            </div>    
         </div>
-
         <div class="card-footer">
             <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input>
         </div>
