--- a/AKchatApp/src/app/header/header.component.css
+++ b/AKchatApp/src/app/header/header.component.css
@@ -1,4 +1,4 @@
-.header{
+.header {
     position: relative;
 }
 
@@ -6,10 +6,11 @@
     position: absolute;
     right: 90px;
 } */
-.buttons{
-   width:  -webkit-fill-available;
+.buttons {
+    width: -webkit-fill-available;
 }
-.msgdot{
+
+.msgdot {
     background-color: #ffc107;
     width: 19px;
     height: 14px;
@@ -18,12 +19,12 @@
     font-size: small;
 }
 
-.gallery-btn{
+.gallery-btn {
     background-color: transparent;
     border: 0px;
 }
 
-.gallery-btn{
+.gallery-btn {
     background-color: transparent;
     border: 0px;
 }
@@ -33,23 +34,219 @@ button.dbtn:focus {
     -webkit-appearance: none;
     -moz-appearance: none;
     outline: none;
-    border: none;}
+    border: none;
+}
 
-    hr{
-        margin: 8px;
-        opacity: 1;
+hr {
+    margin: 8px;
+    opacity: 1;
+}
+
+.user-image {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
+.user-image1 {
+    height: 29px;
+    width: 28px;
+    position: absolute;
+    right: 30px;
+    top:-2px;
+}
+hr {
+    color: white;
+}
+
+.no-padding {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+/* .togglebody{
+        width: 100%;
+    } */
+
+/* For Hamburgur toggle */
+#sidebarMenu {
+    height: 171px;
+    /*change here related your menu height*/
+    position: fixed;
+    overflow: none;
+    width: 100%;
+    z-index: 100;
+    transform: translateY(-171px);
+    /*change here related your menu height*/
+    margin-inline: auto;
+    left: 75%;
+
+    /* margin-top: 63px !important; */
+}
+
+.main-content-wrapper >*{
+    width: 22%;
+    height: 40px;
+    display: block;
+    background: rgb(0 112 60);
+    text-align: center;
+    padding-top: 10px;
+    border: 1px solid white;
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+#sidebarMenu::-webkit-scrollbar {
+    width: 12px;
+}
+
+#sidebarMenu::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+#sidebarMenu::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background: #0000002e;
+    height: 50px;
+}
+
+.sidebarMenuInner {
+    margin: 0;
+    padding: 0;
+    border-top: 1px solid rgba(255, 255, 255, 0.10);
+}
+
+input[type="checkbox"]:checked~#sidebarMenu {
+    transform: translatey(0);
+    top: 50px
+        /*change here related your top menu height*/
+}
+
+input[type=checkbox] {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    display: none;
+}
+
+.sidebarIconToggle {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    cursor: pointer;
+    position: absolute;
+    z-index: 99;
+    height: 22px;
+    width: 22px;
+    right: 10px;
+    top: 5px;
+    display: none
+}
+
+.spinner {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background-color: white;
+}
+
+.horizontal {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: relative;
+    float: left;
+    margin-top: 3px;
+}
+
+.diagonal.part-1 {
+    position: relative;
+    transition: all 0.3s;
+    box-sizing: border-box;
+    float: left;
+}
+
+.diagonal.part-2 {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: relative;
+    float: left;
+    margin-top: 3px;
+}
+
+input[type=checkbox]:checked~.sidebarIconToggle>.horizontal {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    opacity: 0;
+}
+
+input[type=checkbox]:checked~.sidebarIconToggle>.diagonal.part-1 {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    transform: rotate(135deg);
+    margin-top: 8px;
+}
+
+input[type=checkbox]:checked~.sidebarIconToggle>.diagonal.part-2 {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    transform: rotate(-135deg);
+    margin-top: -9px;
+}
+@media screen and (max-width:450px){
+    .main-content-wrapper >*{
+        width:32% !important;
+    }
+    #sidebarMenu{
+        left:65% !important;
+    }
+}
+@media screen and (max-width:485px){
+    .bellnoti{
+        display: block !important;
+    }
+}
+@media screen and (max-width: 520px) {
+    .bellicon{
+      margin-right: 60px !important;
+    }
+  }
+@media screen and (max-width: 560px) {
+    .bellicon{
+      margin-right: 45px !important;
+    }
+  }
+@media screen and (max-width: 580px) {
+  .bellicon{
+    margin-right: 22px;
+  }
+}
+@media screen and (max-width:600px){
+    .main-content-wrapper >*{
+        width:27%;
+    }
+    #sidebarMenu{
+        left:70%;
+    }
+}
+@media screen and (max-width:940px) {
+    .togglebody {
+        display: block !important;
+    }
+    .bellicon{
+        display: block !important;
+    }
+}
+@media screen and (max-width: 950px) {
+    .sidebarIconToggle {
+        display: block;
     }
 
-    .user-image{
-        height: 20px;
-        width: 20px;
-        border-radius: 50%;
+    .dropdown {
+        display: none !important;
     }
 
-    hr{
-        color: white;
-    }
-    .no-padding{
-        padding-left: 0;
-  padding-right: 0;
-    }
+}
+
