--- a/AKchatApp/src/app/header/header.component.html
+++ b/AKchatApp/src/app/header/header.component.html
@@ -7,24 +7,27 @@
   </div>
 
 
+
   <!-- after login header -->
   <div class="container-fluid d-flex" *ngIf="service.myName">
-    <div class="col-md-6">
+    <div class="col-2 col-sm-4 col-md-6">
       <div *ngIf="!isChatRoute && extractedWord !== 'chat'">
         <button class="btn btn-warning btn-sm" type="button" [routerLink]="['/chat']"><i class="bi bi-arrow-left"></i>
-          &nbsp; Back to Chat</button>
+        <span class="d-none d-sm-inline-flex">  &nbsp; Back to Chat</span>
+        </button>
       </div>
     </div>
-    <div class="col-md-6 d-flex justify-content-between header">
-      
+    <div class="col-8 col-sm-7 col-md-6 d-flex justify-content-between header">
       <div>
         <span class="navbar-brand mb-0 h1">Chat Application</span>
       </div>
       <div class="dropdown mb-0 d-flex">
         <div style="display: flex;align-items: center;" class="position-relative" (click)="openNotiDialogue()">
           <i class="bi bi-bell me-2" style="color: white; font-size: 22px;"></i>
-          <span class="border rounded-circle msgdot position-absolute justify-content-center align-items-center d-flex fw-bolder" style="color:rgb(25, 135, 84)" *ngIf="this.service.countmsg>0">{{service.countmsg}}</span>
-       </div>  
+          <span
+            class="border rounded-circle msgdot position-absolute justify-content-center align-items-center d-flex fw-bolder"
+            style="color:rgb(25, 135, 84)" *ngIf="this.service.countmsg>0">{{service.countmsg}}</span>
+        </div>
         <div>
           <button class="btn btn-danger btn-sm me-3 gallery-btn" type="button" [routerLink]="['/gallery']"><i
               class="bi bi-images"></i></button>
@@ -43,6 +46,40 @@
           </ul>
         </div>
       </div>
+
+      <div class="d-flex  d-none bellicon">
+        <div style=" display: flex;align-items: center;" class="position-relative" (click)="openNotiDialogue()">
+          <i class="bi bi-bell me-2" style="color: white; font-size: 22px;"></i>
+          <span
+            class="border rounded-circle msgdot position-absolute justify-content-center align-items-center d-flex fw-bolder"
+            style="color:rgb(25, 135, 84)" *ngIf="this.service.countmsg>0">{{service.countmsg}}
+          </span>
+        </div>
+      </div>
+   
+      <div class="body togglebody d-none">
+        <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
+        <label for="openSidebarMenu" class="sidebarIconToggle">
+          <div class="spinner diagonal part-1"></div>
+          <div class="spinner horizontal"></div>
+          <div class="spinner diagonal part-2"></div>
+        </label>
+        <div id="sidebarMenu">
+          <div class="main-content-wrapper">
+            <div class="d-flex justify-content-center">
+              <span><img class="me-2" style="width:20px;height:20px" [src]="this.service.imageUrl" alt=""></span>
+              <span><a (click)="profile()">User Profile</a></span>
+            </div>
+          
+            <div class="d-flex justify-content-center">
+              <span><img class="me-2" style="width:20px;height:20px" src='/assets/img/logo.jpg' alt=""></span>
+              <span style="margin-right: 23px;"><a (click)="logout()">LogOut</a></span>
+            </div>
+
+          </div>
+        </div>
+      </div>
+   
     </div>
   </div>
 
