--- a/AKchatApp/src/app/user-profile/user-profile.component.html
+++ b/AKchatApp/src/app/user-profile/user-profile.component.html
@@ -1,42 +1,37 @@
 <div class="row d-flex justify-content-center main-body mt-5 mb-5">
-    <div class="col-8">
+    <div class="col-12 col-md-8">
         <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
             <mat-card>
 
-                <div class="d-flex justify-content-center mb-5 ">
+                <div class="d-flex justify-content-center mb-5">
                     <div class="user-image d-flex justify-content-center">
                         <input class="image-input" type="file" #Image accept="image/*"
                             (change)="handleFileInput($event)">
                         <img class="user-image" [src]="imageUrl" alt="">
-                    <div class="edit-pencil"><i class="bi bi-pencil-square" style="font-size: x-large;color: white;"></i></div>
-
+                        <div class="edit-pencil"><i class="bi bi-pencil-square"
+                                style="font-size: x-large;color: white;"></i></div>
                     </div>
                 </div>
 
-                <div class="d-flex justify-content-between">
+                <div class="div1 d-flex justify-content-between">
                     <mat-card-content class="d-flex flex-column half-size">
                         <label>Name</label>
                         <mat-form-field appearance="outline">
-
                             <mat-label>Name</mat-label>
                             <input matInput formControlName="name">
                         </mat-form-field>
                     </mat-card-content>
-
-
                     <mat-card-content class="d-flex flex-column half-size">
                         <label>Email</label>
                         <mat-form-field appearance="outline">
-
                             <mat-label>Email</mat-label>
                             <input matInput formControlName="email">
                         </mat-form-field>
-
                     </mat-card-content>
                 </div>
 
 
-                <div class="d-flex justify-content-between">
+                <div class="div1 d-flex justify-content-between">
                     <mat-card-content class="d-flex flex-column mb-4 content-with-border half-size">
                         <div class="d-flex">
                             <label>Gender :</label>
@@ -46,7 +41,6 @@
                                 <mat-radio-button class="ms-4" value="Other">Other</mat-radio-button>
                             </mat-radio-group>
                         </div>
-
                     </mat-card-content>
 
                     <mat-card-content class="d-flex flex-column content-with-border half-size">
@@ -61,10 +55,9 @@
                         </div>
 
                     </mat-card-content>
-
                 </div>
 
-                <div class="d-flex justify-content-between">
+                <div class="div1 d-flex justify-content-between">
 
                     <mat-card-content class="d-flex flex-column half-size">
                         <label>Phone Number</label>
@@ -101,8 +94,7 @@
 
 
                 <mat-card-content class="d-flex justify-content-center">
-                    <button    mat-raised-button color="primary" class="w-50"
-                        type="submit">Save</button>
+                    <button mat-raised-button color="primary" class="w-50" type="submit">Save</button>
                 </mat-card-content>
                 <mat-card-footer></mat-card-footer>
             </mat-card>
