commit for div tag

--- a/AKchatApp/src/app/story/story.component.html
+++ b/AKchatApp/src/app/story/story.component.html
@@ -30,8 +30,8 @@
 
 
           <!-- <div>{{story.userid}}</div> -->
-          <div>{{service.myName}}</div>
-          <div>{{story.uploadedUser}}</div>
+          <!-- <div>{{service.myName}}</div>
+          <div>{{story.uploadedUser}}</div> -->
 
           <hr>
         </div>
